<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/myScreen1"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lbl_editText_hint_color"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_btn_exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextColor" />

    <TextView
        android:id="@+id/textViewSpy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_txtView_spyText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textViewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_txtView_notice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpy" />

    <TextView
        android:id="@+id/textViewCuong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_txtView_cuong"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNote" />

    <TextView
        android:id="@+id/textViewHau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_txtView_hau"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCuong" />

    <TextView
        android:id="@+id/textViewHuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_txtView_huy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHau" />

    <TextView
        android:id="@+id/textViewToan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_txtView_toan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHuy" />

</LinearLayout>